--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/slyg/redirect-laundromat",
   "devDependencies": {
+    "chai": "^1.9.1",
     "mocha": "^1.20.1",
     "rewire": "^2.0.1"
   }
