--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jshint --verbose lib/ test/ && mocha -R spec test/"
+    "test": "./node_modules/jshint/bin/jshint --verbose lib/ test/ && ./node_modules/mocha/bin/mocha -R spec test/",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,10 @@
   "homepage": "https://github.com/slyg/redirect-laundromat",
   "devDependencies": {
     "chai": "^1.9.1",
+    "coveralls": "^2.10.0",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1",
+    "mocha-lcov-reporter": "0.0.1",
     "rewire": "^2.0.1"
   }
 }
