--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint --verbose lib/ test/ && ./node_modules/mocha/bin/mocha -R spec test/",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js"
   },
   "repository": {
     "type": "git",
