--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint --verbose lib/ test/ && ./node_modules/mocha/bin/mocha -R spec test/",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js"
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js",
+    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require test/support/env --reporter spec"
   },
   "repository": {
     "type": "git",
