--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/slyg/redirect-laundromat",
   "devDependencies": {
     "chai": "^1.9.1",
+    "istanbul": "0.2.10",
     "coveralls": "^2.10.0",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1",
