--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "mocha": "^1.20.1",
     "mocha-lcov-reporter": "0.0.1",
     "rewire": "^2.0.1"
+  },
+  "dependencies": {
+    "lodash": "^2.4.1"
   }
 }
