--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "rewire": "^2.0.1"
   },
   "dependencies": {
-    "lodash": "^2.4.1",
-    "sinon": "^1.10.2"
+    "lodash": "^2.4.1"
   }
 }
