--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint --verbose lib/ test/ && ./node_modules/mocha/bin/mocha -R spec test/",
     "test-watch": "./node_modules/mocha/bin/mocha -wR spec test/",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js",
+    "test-coverage": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.test.js",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec"
   },
   "repository": {
